src/SNI/include/sni.hpp

//----------------------------------------------------------------------------
// Name: 	SNI_ERROR
//
// Purpose:	Struct to retrieve error information.
//
// Notes:	None.
//			
//----------------------------------------------------------------------------
typedef struct
{
	ProviderNum Provider;
	WCHAR     	pszErrorMessage[MAX_PATH+1];
	DWORD	    dwNativeError;
	DWORD 	    dwSNIError;

	//
	// Debug Info
	//
	WCHAR * pszFileName;
	WCHAR * pszFunction;
	DWORD	dwLineNumber;
} SNI_ERROR;
// Function Declarations

// Connection related functions
extern "C" DWORD SNIInitialize(void * pmo = NULL);
extern "C" DWORD SNITerminate();
extern "C"  DWORD SNIQueryInfo( UINT QType, __out VOID * pbQInfo);
extern "C"  inline void SNIPacketRelease(__inout SNI_Packet * pPacket);
extern "C"  inline void SNIPacketSetData(__inout SNI_Packet * pPacket, __in_bcount(cbBuf) const BYTE * pbBuf, __in DWORD cbBuf);
// Error functions
extern "C"  void SNIGetLastError( __out SNI_ERROR * pErrorStruct );
// Security functions
extern "C"  DWORD SNISecInitPackage(__out DWORD * pcbMaxToken);